Remove trailing whitespaces

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -87,16 +87,16 @@
                         </a>
                       </li>
                     </ul>
-            
+
                   </div>
                   <div class="cell small-9 medium-cell-block-y tabs-content__wrapper">
                       <div class="tabs-content" data-tabs-content="offcanvas-tabs">
-    
+
                         <!-- First panel content -->
                         <div class="tabs-panel" id="panel-scenario">
                           <form>
                             <fieldset>
-                              <legend>Szenario auswählen 
+                              <legend>Szenario auswählen
                                 <i class ="icon ion-information-circled icon--small" title="Informationen zum Inhalt"></i>
                               </legend>
                               <div>
@@ -130,7 +130,7 @@
                             </fieldset>
                           </form>
                         </div>
-          
+
                         <!-- Second panel content -->
                         <div class="tabs-panel is-active" id="panel-energy-system">
 
@@ -170,50 +170,50 @@
                             </li>
                           </ul>
                         </div>
-          
+
                         <!-- Third panel content -->
                         <div class="tabs-panel" id="panel3v">
 
                         </div>
-          
+
                         <!-- Fourth panel content -->
                         <div class="tabs-panel" id="panel4v">
                           <p>This will show some graphs soon</p>
                           <img class="thumbnail" src="{% static 'stemp_abw/img/generic/rectangle-2.jpg' %}">
                         </div>
                       </div>
-    
+
                   </div>
                 </div>
               </div>
             </div>
-    
+
             <button class="close-button" aria-label="Close menu" type="button" data-close>
               <span aria-hidden="true">&times;</span>
             </button>
-    
+
           </div>
           <!-- OFF CANVAS END -->
-      
+
           <!-- CONTENT (MAP + FOOTER) START -->
           <main class="off-canvas-content" data-off-canvas-content>
             <div class="map-wrapper">
-              
+
               <button type="button" class="button open-offcanvas" data-toggle="offCanvas" title="Parameter">
                 <i class="icon ion-android-options"></i>
               </button>
 
               {% leaflet_map "map" callback="window.map_init_basic" settings_overrides=leaflet_config%}
-      
+
             </div>
           </main>
           <!-- CONTENT (MAP + FOOTER) END -->
-      
+
         </div>
-      
+
         <footer class="map-footer">
           <div class="grid-x">
-    
+
             <div class="cell medium-4 large-6">
               <ul class="map-footer__legal">
                 <li>
@@ -224,7 +224,7 @@
                 </li>
               </ul>
             </div>
-    
+
             <div class="cell medium-8 large-6">
               <ul class="map-footer__logo">
                 <li>
@@ -249,10 +249,10 @@
                 </li>
               </ul>
             </div>
-    
+
           </div>
         </footer>
-      
+
       </div>
 
     <script src="{% static 'WAM_APP_FRED/foundation/js/app.js' %}"></script>
@@ -265,7 +265,7 @@
                 iconAnchor:   [19, 72], // point of the icon which will correspond to marker's location
                 popupAnchor:  [0, -20] // point from which the popup should open relative to the iconAnchor
             });
-            
+
             var solarRoofIcon = L.icon({
                 iconUrl: "{% static 'WAM_APP_FRED/img/Pin_solarenergy_roof_color_v2.svg' %}",
                 iconSize:     [36, 44], // size of the icon
@@ -299,7 +299,7 @@
                 iconAnchor:   [18, 44], // point of the icon which will correspond to marker's location
                 popupAnchor:  [0, -20] // point from which the popup should open relative to the iconAnchor
             });
-      
+
             var highlightStyle = {
                   opacity: 0.7,
                   weight: 2,
@@ -323,7 +323,7 @@
               };
 
             // define a var which holds a GEOJSON from a URL provided by django
-          
+
             var mouse_click_location = "{% url 'WAM_APP_FRED:MouseClick'|add:'.data' %}";
             var weather_data_click_location = "{% url 'WAM_APP_FRED:WeatherPointClick'|add:'.data' %}";
 
@@ -331,7 +331,6 @@
 
             var ppr_location = "{% url 'WAM_APP_FRED:PowerPlantRegister'|add:'.data' %}";
             var ppr_content = "{% url 'WAM_APP_FRED:PowerPlantPopup'|add:'.data' %}";
-
 
             function map_init_basic (map, options) {
               var popup = L.popup();
@@ -361,6 +360,8 @@
                   marker.feature.properties = feature.properties
                   TESTER = document.getElementById('tester');
                   var height = feature.properties.heights[0];
+                  console.log(user_height)
+                  console.log(height)
                   Plotly.plot( TESTER, [{
                   x: feature.properties.data[user_height]['x'],
                   y: feature.properties.data[user_height]['y']}], {
@@ -560,7 +561,7 @@
 
                   layer.on('click', onPowerPlantDataPointClick);
               }
-              
+
               var regionPowerPlantgroup = L.layerGroup().addTo(map);
 
               function createPowerPlantsPoints(powerplants){
@@ -581,7 +582,7 @@
 
 
               // request all power plants contained in selected region
-              // also include the generation_type option 
+              // also include the generation_type option
               function loadRegionPowerPlants(region, layer){
                 region_name = region.feature.properties.name;
                 generation_type = $("input[name=generation_type]:checked").val();
@@ -598,7 +599,7 @@
                     success: createPowerPlantsPoints
                   });
                 }
-              
+
               // add all power plants from url to map
               function addPowerPlantToMap(){
 
@@ -643,12 +644,12 @@
                   if (feature.property) {
                     var keys = Object.keys(feature.property);
                     var content = '<table class="selection_detail">';
-                    
+
                     for (let i = 0, len = keys.length; i < len; i++) {
                       content = content + '<tr><td align="right"><b>' + keys[i] + '</b>:</td><td>' + feature.property[keys[i]] + '</td></tr>'
                     }
                     content = content + '</table>';
-                    
+
                     console.log(marker);
                     marker._popup.setContent(content);
 
@@ -658,7 +659,7 @@
                   }
                 }
 
-              // add icon on to clicked circelmarker 
+              // add icon on to clicked circelmarker
               function addPowerPlantMarker (feature, marker){
                 // ugly function body insert generic or something similar
                 if (feature.property.generation_subtype == "solar_roof_mounted") {
@@ -678,10 +679,10 @@
                 }
                 if (feature.properties.generation_subtype == "biogas_dry_fermentation") {
                   return L.marker(marker._latlng, {icon: biomassIcon});
-                }              
+                }
                 if (feature.properties.generation_subtype == "biofuel") {
                   return L.marker(marker._latlng, {icon: biomassIcon});
-                }   
+                }
                 if (feature.properties.generation_subtype == "wind_offshore") {
                   return L.marker(marker._latlng, {icon: windOffIcon});
                 }
@@ -695,7 +696,7 @@
                   // insert icon not availabe -> add when available
                 }
                 if (feature.properties.generation_subtype == "gas") {
-                  // insert icon not availabe -> add when available  
+                  // insert icon not availabe -> add when available
                 }
                 if (feature.properties.generation_subtype == "biogas_from_grid") {
                   // insert icon not availabe -> add when available
@@ -714,7 +715,7 @@
                 }
                 if (feature.properties.generation_subtype == "waste_wood") {
                   // insert icon not availabe -> add when available
-                } 
+                }
               }
 
               //PowePlantRegister EndSection
