Fix popup content display function

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -650,8 +650,9 @@
                     }
                     content = content + '</table>';
 
+                    var popup = marker.getPopup();
                     console.log(marker);
-                    marker._popup.setContent(content);
+                    popup.setContent(content);
 
                     // is this working????
                     addPowerPlantMarker(feature, marker);
