--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -302,6 +302,13 @@
                 popupAnchor:  [0, -20] // point from which the popup should open relative to the iconAnchor
             });
 
+            var powerPlantIcon = L.icon({
+                iconUrl: "{% static 'WAM_APP_FRED/img/powerplant.svg' %}",
+                iconSize:     [36, 44], // size of the icon
+                iconAnchor:   [18, 44], // point of the icon which will correspond to marker's location
+                popupAnchor:  [0, -20] // point from which the popup should open relative to the iconAnchor
+            });
+
             var highlightStyle = {
                   opacity: 0.7,
                   weight: 2,
@@ -453,14 +460,15 @@
               // see http://leafletjs.com/reference-1.3.0.html#path for additional options
               let myLayerStyle = {
                 color: 'Orange',
-                radius: 5
+                radius: 5,
+                icon: powerPlantIcon
               };
 
 
 
               // add all of the GeoJSON data to the empty layer we created
               function createCircles (feature, latlng) {
-                return L.circleMarker(latlng, myLayerStyle)
+                return L.marker(latlng, myLayerStyle)
               }
 
 
