--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -138,7 +138,7 @@
                         <!-- Second panel content -->
                         <div class="tabs-panel is-active" id="panel-energy-system">
                           <h4>Weather Data</h4>
-                          <p>Click on the map to load the closest weather data. You can then click on one of the loaded points to to display the weather over the selected time period. </p>
+                          <p>Click on the map to load the closest weather data points. You can then click on one of the loaded points to to display the weather data over the selected time period for a given height and variable. The download can take some time, depending on how many data you required. </p>
 
                           <ul class="accordion" data-accordion>
                             <li class="accordion-item accordion-item--no-border is-active" data-accordion-item>
