Create an oep query for feedinlib

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -490,7 +490,7 @@
               // return current location of the mouse-courser
               // access the original DOM even translate to L.LatLag instance
               // Rest-full return the value to the server with POST with jQuery
-              map.on('click', onMapClick);
+              //map.on('click', onMapClick);
 
 
             function addWeatherPoint(data) {
@@ -726,6 +726,7 @@
               //
               function displayFeedinLib(data){
                 console.log('Feedinlib')
+                console.log(data)
               };
 
               function loadRegionFeedinlib(region, layer){
