--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -95,7 +95,7 @@
                       <div class="tabs-content" data-tabs-content="offcanvas-tabs" id="fred-tabs">
 
                         <!-- First panel content -->
-                        <div class="tabs-panel" id="panel-scenario">
+                        <div class="tabs-panel" id="panel-powerplants">
                           <h4>Power Plant Register</h4>
                           <p>Select a type of powerplant in this menu. When you click on the map, it will load all powerplants of that type within the selected state. Loading may take a while. Click on another state to load new data.</p>
                           <form>
@@ -179,9 +179,9 @@
 
                         <!-- Third panel content -->
                         <div class="tabs-panel" id="panel-feedinlib">
-
+                            <div id="feedin-plot" style="width:300px;height:250px;">
+                            </div>
                         </div>
-
                       </div>
 
                   </div>
