--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -184,8 +184,8 @@
                   <!-- Third panel content -->
                   <div class="tabs-panel" id="panel-feedinlib">
                     test
-                    <div id="feedin-plot" style="width:300px;height:250px;">
-                    </div>
+                    <!--<div id="feedin-plot" style="width:300px;height:250px;">
+                    </div>-->
                   </div>
                 </div>
 
