changed all german to englisch

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -103,36 +103,36 @@
                     <p>Select a type of powerplant in this menu. When you click on the map, it will load all powerplants of that type within the selected state. Loading may take a while. Click on another state to load new data.</p>
                     <form>
                       <fieldset>
-                        <legend>Szenario auswählen
+                        <legend>Choose one powerplant type
                           <i class="icon ion-information-circled icon--small" title="Informationen zum Inhalt"></i>
                         </legend>
                         <div>
                           <input type="radio" name="generation_type" value="solar" id="Solar" required checked>
-                          <label for="Solar">Photovoltaikanlagen</label>
+                          <label for="Solar">Photovoltaic-plant</label>
                         </div>
                         <div>
                           <input type="radio" name="generation_type" value="wind" id="Wind">
-                          <label for="Wind">Windkraftanlagen</label>
+                          <label for="Wind">Wind-turbines</label>
                         </div>
                         <div>
                           <input type="radio" name="generation_type" value="geothermal" id="Geothermal">
-                          <label for="Geothermal">Geothermieanlagen</label>
+                          <label for="Geothermal">Geothermal-plants</label>
                         </div>
                         <div>
                           <input type="radio" name="generation_type" value="run_of_river" id="Run_of_river">
-                          <label for="Run_of_river">Wasserkraftanlage</label>
+                          <label for="Run_of_river">Hydropower-plant</label>
                         </div>
                         <div>
                           <input type="radio" name="generation_type" value="gas" id="Gas">
-                          <label for="Gas">Gaskraftwerk</label>
+                          <label for="Gas">Gaspower-plant</label>
                         </div>
                         <div>
                           <input type="radio" name="generation_type" value="reservoir" id="Reservoir">
-                          <label for="Reservoir">Pumpspeicherkraftwerk</label>
+                          <label for="Reservoir">Pumped-storage-powerplant</label>
                         </div>
                         <div>
                           <input type="radio" name="generation_type" value="biomass" id="Biomass">
-                          <label for="Biomass">Biogasanlage</label>
+                          <label for="Biomass">Biogas-plant</label>
                         </div>
                       </fieldset>
                     </form>
