Add instructions to Feedin-Time Series menu

--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -176,7 +176,8 @@
 
                   <!-- Third panel content -->
                   <div class="tabs-panel" id="panel-feedinlib">
-                    test
+                    <p>Click on a region displayed on the map. Click the now visible datapoint displayed 
+                      in the middle of the specific region.</p>
                     <!--<div id="feedin-plot" style="width:300px;height:250px;">
                     </div>-->
                   </div>
