--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -176,8 +176,11 @@
 
                   <!-- Third panel content -->
                   <div class="tabs-panel" id="panel-feedinlib">
-                    <p>Click on a region displayed on the map. Click the now visible datapoint displayed 
-                      in the middle of the specific region.</p>
+                    <p>
+                      Click on a region displayed on the map. Click the now visible datapoint displayed 
+                      in the middle of the specific region. Currently the plot in the popup window 
+                      shows data received from a test data set.
+                    </p>
                     <!--<div id="feedin-plot" style="width:300px;height:250px;">
                     </div>-->
                   </div>
