--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -177,7 +177,7 @@
                   <!-- Third panel content -->
                   <div class="tabs-panel" id="panel-feedinlib">
                     <p>
-                      Click on a region displayed on the map. Click the now visible datapoint displayed 
+                      Select a variable and a time span, then click on a region highlighted on the map. The data will be displayed on a graph inside a popup.
                       in the middle of the specific region. Currently the plot in the popup window 
                       shows data received from a test data set.
                     </p>
