--- a/templates/WAM_APP_FRED/test_map_layout.html
+++ b/templates/WAM_APP_FRED/test_map_layout.html
@@ -178,7 +178,7 @@
                   <div class="tabs-panel" id="panel-feedinlib">
                     <p>
                       Select a variable and a time span, then click on a region highlighted on the map. The data will be displayed on a graph inside a popup.
-                      in the middle of the specific region. Currently the plot in the popup window 
+                       Currently the plot in the popup window 
                       shows data received from a test data set.
                     </p>
                     <!--<div id="feedin-plot" style="width:300px;height:250px;">
